Made all the images consistently sized. Added gradle dependencies and the ability to view an article.

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">The Daily Feed</string>
     <string name="powered_by_powered_by_newsapi_org">Powered by powered by NewsAPI.org</string>
+    <string name="title_activity_article">ArticleActivity</string>
 </resources>
